--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://ad.addizhi.top/push/meng.css?2022" />
     <title>猛男情报局|猛男地址|最新地址|最新可用地址</title>
+	
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta content='width=device-width, initial-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="keywords" content="猛男情报局,猛男地址,猛男情报局最新地址,国产自拍,自拍视频,成人视频,成人图片,成人自拍,最新地址
 " />
     <meta name="description" content="欢迎访问猛男情报局|猛男地址地址发布页，为您提供猛男情报局最新地址。" />
+    <meta name="google-site-verification" content="MHyKmRsY94ssMnOJ0cdfqQRtAvAwlNBO8exI7v8wRKw" />
 	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-F67B73EPDC"></script>
 	<script>
